--- a/sampexlib/SAMPEX/microburst_plotter.ipynb
+++ b/sampexlib/SAMPEX/microburst_plotter.ipynb
@@ -72,15 +72,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "333.3333333333333\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# counts units = [counts/100ms]\n",
     "def counts2flux(counts):\n",
@@ -93,7 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algorithm = ( N_100[i] - A_500[i] ) / math.sqrt(1 + A_500[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
